# pdf-tools

./: .gitignore  CMakeLists.txt  package-lock.json  package.json
python-scripts/: ocr_processor.py  pdf_converter.py  pdf_editor.py  pdf_text_editor.py  requirements.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs  pdf_compress.rs  pdf_ops.rs  pdf_security.rs  python.rs
src/components/: CompressModal.css  CompressModal.tsx  DocumentManager.tsx  FileHistory.tsx  FileUploader.tsx  PDFEditor.tsx  PDFToolbar.tsx  PDFViewer.tsx  PasswordModal.css  PasswordModal.tsx  RotateModal.tsx  SplitModal.tsx  ToolsPanel.css  ToolsPanel.tsx
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  index.ts
src/styles/: DocumentManager.css  FileHistory.css  FileUploader.css  PDFEditor.css  PDFToolbar.css  PDFViewer.css
src/styles/ui/: Button.css  Input.css  Modal.css  RotateModal.css  SplitModal.css
src/types/: index.ts
src/utils/: documentStorage.ts  pdfCompress.ts  pdfOperations.ts  tauri.ts
